@@ -4,6 +4,7 @@ use Test::More;
 use Mojo::File qw(path tempdir);
 use Mojo::Log;
 use Mojo::Util 'decode';
+use Time::HiRes 'time';
 
 # Logging to file
 my $dir  = tempdir;
@@ -53,8 +54,8 @@ $log->format(sub {
   my ($time, $level, @lines) = @_;
   return join ':', $level, $time, @lines;
 });
-like $log->format->(time, 'debug', qw(Test 1 2 3)), qr/^debug:\d+:Test:1:2:3$/,
-  'right format';
+like $log->format->(time, 'debug', qw(Test 1 2 3)),
+  qr/^debug:[0-9.]+:Test:1:2:3$/, 'right format';
 
 # Short log messages (systemd)
 {
@@ -122,12 +123,12 @@ $content = decode 'UTF-8', $buffer;
 like $content,   qr/\[.*\] \[error\] First\n/,        'right error message';
 like $content,   qr/\[.*\] \[info\] Fourth\nFifth\n/, 'right info message';
 unlike $content, qr/debug/,                           'no debug message';
-like $history->[0][0], qr/^\d+$/, 'right epoch time';
-is $history->[0][1],   'fatal',   'right level';
-is $history->[0][2],   'Second',  'right message';
-is $history->[1][1],   'info',    'right level';
-is $history->[1][2],   'Fourth',  'right message';
-is $history->[1][3],   'Fifth',   'right message';
+like $history->[0][0], qr/^[0-9.]+$/, 'right epoch time';
+is $history->[0][1],   'fatal',       'right level';
+is $history->[0][2],   'Second',      'right message';
+is $history->[1][1],   'info',        'right level';
+is $history->[1][2],   'Fourth',      'right message';
+is $history->[1][3],   'Fifth',       'right message';
 ok !$history->[2], 'no more messages';
 
 # "debug"
