@@ -6,7 +6,8 @@
   - Improved debug, error, fatal, info and warn methods in Mojo::Log to accept
     closures to generate log messages on demand. So expensive code for debugging
     can be deactivated easily in production.
-  - Improved Mojo::Log to include the process id in log messages.
+  - Improved Mojo::Log to use the time format "2018-11-08T14:25:5.76027" and to
+    include the process id in log messages.
   - Improved Mojolicious performance by up to 10% with more efficient logging.
 
 8.05  2018-10-25
